--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
                             <i class="fab fa-github"></i>
                             Código
                         </a>
-                        <a href="https://periodicos.ufsm.br/coming/article/view/85256">
+                        <a href="https://periodicos.ufsm.br/coming/article/view/85256" class="paper-link">
                             <i class="fas fa-external-link-alt"></i>
                             Publicação
                         </a>
