--- a/index.html
+++ b/index.html
@@ -1024,10 +1024,33 @@
                                 <i class="fab fa-github"></i>
                                 Código
                             </a>
-                            <a href="#" class="project-link">
+<!--                             <a href="#" class="project-link">
                                 <i class="fas fa-external-link-alt"></i>
                                 Demo
+                            </a> -->
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="project-header">
+                            <h3 class="project-title">Rust Studies from Zero to Projects</h3>
+                            <p class="project-description">
+                                Repositório que documenta meus planos de estudo, materiais e projetos desenvolvidos em torno da linguagem Rust.
+                            </p>
+                            <div class="project-tech">
+                                <span class="tech-tag">Linguagem de Programação</span>
+                                <span class="tech-tag">Rust</span>
+                                <span class="tech-tag">Plano de estudo</span>
+                            </div>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/Brenda-Machado/rust-studies-from-zero" class="project-link">
+                                <i class="fab fa-github"></i>
+                                Código
                             </a>
+<!--                             <a href="#" class="project-link">
+                                <i class="fas fa-external-link-alt"></i>
+                                Demo
+                            </a> -->
                         </div>
                     </div>
                 </div>
@@ -1058,12 +1081,34 @@
                                 <i class="fab fa-github"></i>
                                 Code
                             </a>
-                            <a href="#" class="project-link">
+<!--                             <a href="#" class="project-link">
                                 <i class="fas fa-external-link-alt"></i>
                                 Demo
-                            </a>
+                            </a> -->
                         </div>
                     </div>
+                    <div class="project-card">
+                        <div class="project-header">
+                            <h3 class="project-title">Rust Studies from Zero to Projects</h3>
+                            <p class="project-description">
+                                This repository documents my Rust learning journey, focusing on practical application through command-line projects. 
+                            </p>
+                            <div class="project-tech">
+                                <span class="tech-tag">Programing Language</span>
+                                <span class="tech-tag">Rust</span>
+                                <span class="tech-tag">Study Plan</span>
+                            </div>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/Brenda-Machado/rust-studies-from-zero" class="project-link">
+                                <i class="fab fa-github"></i>
+                                Code
+                            </a>
+<!--                             <a href="#" class="project-link">
+                                <i class="fas fa-external-link-alt"></i>
+                                Demo
+                            </a> -->
+                        </div>
                 </div>
             </div>
         </div>
